chore: added jvm args for testing, added assertj dependency for testing, added java poet and mesh-di core dependencies